[package]
name = "lighter-ip-list"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true }
toml = { workspace = true }
serde = { workspace = true }
directories = { workspace = true }
log = { workspace = true }
thiserror = { workspace = true }

[workspace.dependencies]
tokio = { version = "1.21", features = ["full"] }
serde_json = "1" 
reqwest = { version = "0.11", features = ["json"] }
toml = "0.8"
serde = { version = "1", features = ["derive"]}
directories = "5.0"
log = "0.4"
thiserror = "1"


[workspace]
members = ["crates/*"]
