[package]
name = "cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1", features = ["derive"]}
comfy-table = "7.1"
env_logger = "0.10"
orbi-helpers = { path = "../../" }
tokio = { workspace = true }
strum = {version = "0.25", features = ["derive"] }
