[package]
name = "web-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
warp = "0.3"
mime = "0.3"
comfy-table = "6.1"
env_logger = "0.9"
lighter-ip-list = { path = "../../" }
tokio = { workspace = true }
